--- a/style.css
+++ b/style.css
@@ -1,16 +1,26 @@
+*{
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0px;
   background: #f7f7f7;
   display: grid;
   gap: 60px;
   justify-items: center;
-  margin-top: 60px;
+  
 }
 
 .bike{
   width: 100%;
   display: block;
+}
+
+ul{
+  list-style: none;
+  display: flex;
+  gap: 20px;
 }
 
 a{
@@ -39,6 +49,7 @@ p{
   border-radius: 4px;
   color: #000000;
   text-transform: uppercase;
+  display: block;
 }
 
 .conteudo{
@@ -107,4 +118,23 @@ p{
   text-align: center;
   padding: 40px;
   box-sizing: border-box;
+}
+
+header{
+  width: 100%;
+  
+}
+
+.logo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  margin: 40px 0px 40px 0px;
+}
+
+.links a:hover{
+  background: #e21;
+  color: #fff;
+  transition: 0.3s ease-in-out;
 }
