--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 *{
-  margin: 0px;
-  padding: 0px;
+  margin: 0rem;
+  padding: 0rem;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
   background: #f7f7f7;
   display: grid;
-  gap: 60px;
+  gap: 3.75rem;
   justify-items: center;
   
 }
@@ -20,7 +20,7 @@ body {
 ul{
   list-style: none;
   display: flex;
-  gap: 20px;
+  gap: 1.25rem;
 }
 
 a{
@@ -28,25 +28,25 @@ a{
 }
 
 p,h1,h2,h3{
-  margin: 0px;
+  margin: 0rem;
 }
 
 p{
-  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 1.3;
 }
 
 .links{
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 1.25rem;
   justify-content: center;
 }
 
 .links a{
   background: #ffff;
-  padding: 15px 30px;
-  border-radius: 4px;
+  padding: 0.9375rem 1.875rem;
+  border-radius: 0.25rem;
   color: #000000;
   text-transform: uppercase;
   display: block;
@@ -55,57 +55,57 @@ p{
 .conteudo{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  max-width: 1000px;
+  max-width: 62.5rem;
 }
 
 .introducao{
   background: #fff;
-  padding: 40px;
+  padding: 2.5rem;
   text-align: right; 
   position: relative;
   display: grid;
   align-content: center;
-  gap: 20px;
+  gap: 1.25rem;
   justify-items: end;
 }
 
 .detail{
-  width: 60px;
-  height: 4px;
+  width: 3.75rem;
+  height: 0.25rem;
   background: #e21;
   position: absolute;
-  top: 30px;
-  right: -30px;
+  top: 1.875rem;
+  right: -1.875rem;
 }
 
 .button{
   background: #e21;
   color: #fff;
-  padding: 15px 30px;
-  border-radius: 4px;
+  padding: 0.9375rem 1.875rem;
+  border-radius: 0.25rem;
   text-transform: uppercase;
 }
 
 .subtitulo{
-  font-size: 64px;
+  font-size: 4rem;
   text-transform: uppercase;
   color: rgba(0,0,0,0.2);
   text-align: right;
-  padding: 40px;
+  padding: 2.5rem;
   align-self: center;
 }	
 
 .vantagens{
   background: #fff;
-  padding: 40px;
+  padding: 2.5rem;
 
 }
 
 .vantagens-item{
   display: grid;
   grid-template-columns: auto 1fr;
-  gap: 10px 20px;
-  padding: 20px;
+  gap: 0.625rem 1.25rem;
+  padding: 1.25rem;
 }
 
 .vantagens-item p{
@@ -116,7 +116,7 @@ p{
   background: #fff;
   width: 100%;
   text-align: center;
-  padding: 40px;
+  padding: 2.5rem;
   box-sizing: border-box;
 }
 
@@ -129,8 +129,8 @@ header{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
-  margin: 40px 0px 40px 0px;
+  padding: 0.625rem;
+  margin: 2.5rem 0rem 2.5rem 0rem;
 }
 
 .links a:hover{
